fix: article overflow

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -204,6 +204,8 @@ main
         .article-Content
           overflow-y: auto
           width: 100%
+          img
+            width: 100%
       p, h1, h2, h3, h4, h5
         margin-bottom: 1.5em
         margin-top: 1.5em
